tests/idris2/perror003/expected
1/1: Building PError (PError.idr)
Error: Bracket is not properly closed.

PError.idr:5:17--5:18
   |
 5 | bar x = let y = (42 in y + x
   |                 ^

1/1: Building PError2 (PError2.idr)
Error: Bracket is not properly closed.

PError2.idr:5:18--5:19
   |
 5 | bar x = let y := (42 in y + x
   |                  ^

